Changed the places of custom template and title decoration toggles, fixed extra word bug in custom template and removed "un" mutator

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -405,12 +405,12 @@
         android:layout_marginRight="32dp"
         android:layout_marginBottom="16dp"
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/toggle_titleDecorations"
+        app:layout_constraintBottom_toTopOf="@+id/toggle_customTemplate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ToggleButton
-        android:id="@+id/toggle_titleDecorations"
+        android:id="@+id/toggle_customTemplate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -419,9 +419,9 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="16dp"
         android:checked="true"
-        android:text="@string/toggleTitleForms"
-        android:textOff="@string/toggleTitleForms_off"
-        android:textOn="@string/toggleTitleForms_on"
+        android:text="@string/action_customTemplate"
+        android:textOff="@string/customTemplate_off"
+        android:textOn="@string/customTemplate_on"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
