--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,34 +13,34 @@
             android:title="@string/titleCount">
             <item
                 android:id="@+id/action_setTitleCount_1"
-                android:title="1" />
+                android:title="@string/number_1" />
             <item
                 android:id="@+id/action_setTitleCount_2"
-                android:title="2" />
+                android:title="@string/number_2" />
             <item
                 android:id="@+id/action_setTitleCount_3"
-                android:title="3" />
+                android:title="@string/number_3" />
             <item
                 android:id="@+id/action_setTitleCount_4"
-                android:title="4" />
+                android:title="@string/number_4" />
             <item
                 android:id="@+id/action_setTitleCount_5"
-                android:title="5" />
+                android:title="@string/number_5" />
             <item
                 android:id="@+id/action_setTitleCount_6"
-                android:title="6" />
+                android:title="@string/number_6" />
             <item
                 android:id="@+id/action_setTitleCount_7"
-                android:title="7" />
+                android:title="@string/number_7" />
             <item
                 android:id="@+id/action_setTitleCount_8"
-                android:title="8" />
+                android:title="@string/number_8" />
             <item
                 android:id="@+id/action_setTitleCount_9"
-                android:title="9" />
+                android:title="@string/number_9" />
             <item
                 android:id="@+id/action_setTitleCount_10"
-                android:title="10" />
+                android:title="@string/number_10" />
         </menu>
     </item>
 
@@ -55,19 +55,19 @@
             android:title="@string/titleWordCount">
             <item
                 android:id="@+id/action_setTitleWordCount_1"
-                android:title="1" />
+                android:title="@string/number_1" />
             <item
                 android:id="@+id/action_setTitleWordCount_2"
-                android:title="2" />
+                android:title="@string/number_2" />
             <item
                 android:id="@+id/action_setTitleWordCount_3"
-                android:title="3" />
+                android:title="@string/number_3" />
             <item
                 android:id="@+id/action_setTitleWordCount_4"
-                android:title="4" />
+                android:title="@string/number_4" />
             <item
                 android:id="@+id/action_setTitleWordCount_5"
-                android:title="5" />
+                android:title="@string/number_5" />
         </menu>
     </item>
 
@@ -100,6 +100,10 @@
         <item
             android:id="@+id/action_displayCategory4"
             android:orderInCategory="5"
+            android:title="@string/action_displayCategory" />
+        <item
+            android:id="@+id/action_displayCategory5"
+            android:orderInCategory="6"
             android:title="@string/action_displayCategory" />
     </group>
 </menu>
