Added random title length setting and implemented parsing for words ending with dashes

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -214,7 +214,7 @@
         android:layout_height="wrap_content"
         android:paddingEnd="54dp"
         android:paddingRight="54dp"
-        android:text="@string/form_X"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -233,7 +233,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="54dp"
         android:paddingRight="54dp"
-        android:text="@string/form_X"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -252,7 +252,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="54dp"
         android:paddingRight="54dp"
-        android:text="@string/form_X"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -271,7 +271,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="54dp"
         android:paddingRight="54dp"
-        android:text="@string/form_X"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -290,7 +290,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="54dp"
         android:paddingRight="54dp"
-        android:text="@string/form_X"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -309,7 +309,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="54dp"
         android:paddingRight="54dp"
-        android:text="@string/form_X"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -328,7 +328,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="54dp"
         android:paddingRight="54dp"
-        android:text="@string/form_X"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -347,7 +347,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="54dp"
         android:paddingRight="54dp"
-        android:text="@string/form_X"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -366,7 +366,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="54dp"
         android:paddingRight="54dp"
-        android:text="@string/form_X"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -385,7 +385,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="54dp"
         android:paddingRight="54dp"
-        android:text="@string/form_X"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
