Added Substance category to code

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -110,5 +110,9 @@
             android:id="@+id/action_displayCategory5"
             android:orderInCategory="6"
             android:title="@string/action_displayCategory" />
+        <item
+            android:id="@+id/action_displayCategory6"
+            android:orderInCategory="7"
+            android:title="@string/action_displayCategory" />
     </group>
 </menu>
